# rc-xbox-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Documents/: ._rc-xbox-controller-project-idea.md  FSD.md  implementation-plan.md  rc-xbox-controller-project-idea.md
assets/: 2ED05EDC-0B58-4D2C-8432-061C035C5563_1_201_a.heic  301D894F-2EB8-44DE-8164-FA91639352D3_1_201_a.heic  65882EE7-A901-422D-AF1C-EACEEE16708D_1_201_a.heic  909FC683-0EAA-4973-AEC9-92587AC6AA9C_1_201_a.heic
hardware/: rc-xbox-controller.kicad_prl  rc-xbox-controller.kicad_pro  rc-xbox-controller.kicad_sch  ~rc-xbox-controller.kicad_pro.lck
main/: CMakeLists.txt  Kconfig.projbuild  led.c  led.h  main.c  motor_control.c  motor_control.h  my_platform.c  my_platform.h  ota.c  ota.h  steering.c  steering.h  webserver.c  webserver.h  wifi.c  wifi.h
